--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -10,6 +10,7 @@
   "author": "Jacques Lucke",
   "license": "MIT",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
