--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.10",
     "typescript": "^4.0.5",
     "webpack": "^5.4.0",
