--- a/app-server/package.json
+++ b/app-server/package.json
@@ -11,6 +11,10 @@
   "author": "Jacques Lucke",
   "license": "MIT",
   "dependencies": {
+    "@hapi/hapi": "^20.0.3"
+  },
+  "devDependencies": {
+    "@types/hapi__hapi": "^20.0.3",
     "typescript": "^4.1.3"
   }
 }
