--- a/app-server/package.json
+++ b/app-server/package.json
@@ -11,10 +11,12 @@
   "author": "Jacques Lucke",
   "license": "MIT",
   "dependencies": {
-    "@hapi/hapi": "^20.0.3"
+    "@hapi/hapi": "^20.0.3",
+    "@hapi/inert": "^6.0.3"
   },
   "devDependencies": {
     "@types/hapi__hapi": "^20.0.3",
+    "@types/hapi__inert": "^5.2.2",
     "typescript": "^4.1.3"
   }
 }
