--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.development.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.development.config.js"
   },
   "author": "Jacques Lucke",
   "license": "MIT",
