--- a/app-server/package.json
+++ b/app-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/main.js"
+    "start": "node ./build/main.js"
   },
   "author": "Jacques Lucke",
   "license": "MIT",
