change configuration so that dynamic imports work

--- a/web-frontend/tsconfig.json
+++ b/web-frontend/tsconfig.json
@@ -2,5 +2,8 @@
   "compilerOptions": {
     "jsx": "react",
     "sourceMap": true,
+
+    // Needed so that dynamic imports are working.
+    "module": "esnext"
   }
 }
