install react router

--- a/web-frontend/tsconfig.json
+++ b/web-frontend/tsconfig.json
@@ -4,6 +4,8 @@
     "sourceMap": true,
 
     // Needed so that dynamic imports are working.
-    "module": "esnext"
+    "module": "esnext",
+
+    "moduleResolution": "node"
   }
 }
