--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -9,8 +9,13 @@
   "author": "Jacques Lucke",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.13.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
