--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -9,6 +9,7 @@
   "author": "Jacques Lucke",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
